--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,9 @@ a:hover {
   text-decoration: none;
   color: #5f3183;
 }
+tr:hover {
+  color: #5f3183;
+}
 .btn {
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
